--- a/InternManagement/Pages/Admin/Create.cshtml
+++ b/InternManagement/Pages/Admin/Create.cshtml
@@ -5,7 +5,6 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
 <h4>Campaign</h4>
 <hr />
@@ -45,7 +44,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Campaign.TeamId" class="control-label"></label>
-                <select asp-for="Campaign.TeamId" class ="form-control" asp-items="ViewBag.TeamId"></select>
+                <select asp-for="Campaign.TeamId" class="form-control" asp-items="Model.TeamList"></select>
+                <span asp-validation-for="Campaign.TeamId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Campaign.Progress" class="control-label"></label>
