--- a/InternManagement/Pages/Interns/InternProfile.cshtml
+++ b/InternManagement/Pages/Interns/InternProfile.cshtml
@@ -41,7 +41,10 @@
                 <p><strong>Team ID:</strong> @Model.SelectedIntern?.TeamId</p>
                 <p><strong>Start Date:</strong> @Model.SelectedIntern?.InternshipStartingDate.ToShortDateString()</p>
                 <p><strong>End Date:</strong> @Model.SelectedIntern?.InternshipEndingDate.ToShortDateString()</p>
-                <p><strong>Overall Success:</strong> @Model.SelectedIntern?.OverallSuccess</p>
+                <p><strong>Overall Success:</strong> @Model.SelectedIntern?.OverallSuccess%</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: @(Model.SelectedIntern?.OverallSuccess ?? 0)%" aria-valuenow="@(Model.SelectedIntern?.OverallSuccess ?? 0)" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
                 <h4>Academic Information</h4>
@@ -59,42 +62,47 @@
 
     <div>
         <h3>Assignments</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Description</th>
-                    <th>Deadline</th>
-                    <th>Grade</th>
-                    <th>Weight</th>
-                    <th>Complete</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var assignment in Model.Assignments)
-                {
+        <div style="max-height: 350px; overflow-y: auto;">
+            <table class="table">
+                <thead>
                     <tr>
-                        <td>@assignment.Description</td>
-                        <td>@assignment.Deadline?.ToString("yyyy-MM-dd")</td>
-                        <td>@assignment.Grade</td>
-                        <td>@assignment.Weight</td>
-                        <td>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" style="width:30px; height:30px" disabled @(assignment.Complete ? "checked" : "") />
-                            </div>
-                        </td>
-                        <td>
-                            <div style="display: flex; align-items: center;">
-                                <a asp-page="/Interns/Submit" asp-route-id="@assignment.AssignmentId" class="btn btn-primary" style="width: 100px; text-align: center;">Submit</a>
-                                <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');" style="margin-left: 10px;">
-                                    <button type="submit" class="btn btn-danger btn-sm" style="width: 100px; text-align: center;height:40px">Delete</button>
-                                </form>
-                            </div>
-                        </td>
+                        <th>Description</th>
+                        <th>Deadline</th>
+                        <th>Grade</th>
+                        <th>Weight</th>
+                        <th>Complete</th>
+                        <th>Feedback</th>
+                        <th></th>
+
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var assignment in Model.Assignments)
+                    {
+                        <tr>
+                            <td>@assignment.Description</td>
+                            <td>@assignment.Deadline?.ToString("yyyy-MM-dd")</td>
+                            <td>@assignment.Grade</td>
+                            <td>@assignment.Weight</td>
+                            <td>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" style="width:30px; height:30px" disabled @(assignment.Complete ? "checked" : "") />
+                                </div>
+                            </td>
+                            <td>@assignment.Feedback</td>
+                            <td>
+                                <div style="display: flex; align-items: center;">
+                                    <a asp-page="/Interns/Submit" asp-route-id="@assignment.AssignmentId" class="btn btn-primary" style="width: auto; text-align: center;">Submit</a>
+                                    <form method="post" asp-page-handler="DeleteAssignment" asp-route-assignmentId="@assignment.AssignmentId" onsubmit="return confirm('Are you sure you want to delete this assignment?');" style="margin-left: 10px;">
+                                        <button type="submit" class="btn btn-danger btn-sm" style="width: auto; text-align: center;height:40px">Delete</button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 }
 
