--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -65,6 +65,7 @@
                         @intern.InternshipEndingDate.ToString("yyyy-MM-dd")</td>
                     <td>
                         <a asp-page-handler="Details" asp-route-internId="@intern.InternId" class="btn btn-info">Details</a>
+                        <a asp-page="/Interns/Edit" asp-route-id="@intern.InternId" class="btn btn-primary">Edit</a>
                         <form method="post" asp-page-handler="Delete" asp-route-id="@intern.InternId" style="display:inline;"
                             onsubmit="return confirm('Are you sure you want to delete this intern?');">
                             <button type="submit" class="btn btn-danger">Delete</button>
