--- a/InternManagement/Pages/Admin/Create.cshtml
+++ b/InternManagement/Pages/Admin/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Campaign.Tittle" class="control-label"></label>
@@ -22,26 +22,18 @@
                 <input asp-for="Campaign.Description" class="form-control" />
                 <span asp-validation-for="Campaign.Description" class="text-danger"></span>
             </div>
-@*             <div class="form-group">
-                <label asp-for="Campaign.CreatedDate" class="control-label"></label>
-                <input asp-for="Campaign.CreatedDate" class="form-control" />
-                <span asp-validation-for="Campaign.CreatedDate" class="text-danger"></span>
-            </div> *@
+            <!-- <input asp-for="Campaign.CreatedDate" class="form-control" type="hidden"/> -->
             <div class="form-group">
-                <label asp-for="Campaign.StartDate" class="control-label"></label>
-                <input asp-for="Campaign.StartDate" class="form-control" />
-                <span asp-validation-for="Campaign.StartDate" class="text-danger"></span>
+                <label asp-for="Campaign.StartDate" class="control-label" ></label>
+                <input asp-for="Campaign.StartDate" class="form-control"  />
+                <span asp-validation-for="Campaign.StartDate" class="text-danger" ></span>
             </div>
             <div class="form-group">
                 <label asp-for="Campaign.EndDate" class="control-label"></label>
                 <input asp-for="Campaign.EndDate" class="form-control" />
                 <span asp-validation-for="Campaign.EndDate" class="text-danger"></span>
             </div>
-@*             <div class="form-group">
-                <label asp-for="Campaign.CreatedBy" class="control-label"></label>
-                <input asp-for="Campaign.CreatedBy" class="form-control" />
-                <span asp-validation-for="Campaign.CreatedBy" class="text-danger"></span>
-            </div> *@
+            <!--<input asp-for="Campaign.CreatedBy" class="form-control" type="hidden"/>-->
             <div class="form-group">
                 <label asp-for="Campaign.TeamId" class="control-label"></label>
                 <select asp-for="Campaign.TeamId" class="form-control" asp-items="Model.TeamList"></select>
@@ -53,8 +45,8 @@
                 <span asp-validation-for="Campaign.Progress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Campaign.PictureUrl">Company</label>
-                <input asp-for="Campaign.PictureUrl" type="file" class="form-control" />
+                <label asp-for="PictureURL">PictureURL</label>
+                <input asp-for="PictureURL" type="file" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Campaign.Status" class="control-label"></label>
