--- a/InternManagement/Pages/Admin/Index.cshtml
+++ b/InternManagement/Pages/Admin/Index.cshtml
@@ -12,37 +12,37 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].Tittle)
+                @Html.DisplayNameFor(model => model.Campaigns[0].Tittle)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].Description)
+                @Html.DisplayNameFor(model => model.Campaigns[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].CreatedDate)
+                @Html.DisplayNameFor(model => model.Campaigns[0].CreatedDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].StartDate)
+                @Html.DisplayNameFor(model => model.Campaigns[0].StartDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].EndDate)
+                @Html.DisplayNameFor(model => model.Campaigns[0].EndDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].CreatedBy)
+                @Html.DisplayNameFor(model => model.Campaigns[0].CreatedBy)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].Team)
+                @Html.DisplayNameFor(model => model.Campaigns[0].Team)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].Progress)
+                @Html.DisplayNameFor(model => model.Campaigns[0].Progress)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Campaign[0].PictureUrl)
+                @Html.DisplayNameFor(model => model.Campaigns[0].PictureUrl)
             </th>
             <th>Action</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Campaign) {
+@foreach (var item in Model.Campaigns) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Tittle)
