Manage to fetch info from homepage to apply intern

--- a/InternManagement/Pages/HomePage.cshtml
+++ b/InternManagement/Pages/HomePage.cshtml
@@ -52,7 +52,7 @@
                             <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 200px;" />
                         }
                     </div>
-                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate.ToString("yyyy-MM-dd")&endDate=@campaign.EndDate.ToString("yyyy-MM-dd")"
+                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate"
                        class="btn btn-primary">Apply for Internship</a>
                 </div>
                 <hr class="m-4">
