--- a/InternManagement/Pages/Users/Index.cshtml
+++ b/InternManagement/Pages/Users/Index.cshtml
@@ -136,6 +136,8 @@
                                     @Html.DisplayFor(modelItem => item.TeamName)
                                 </td>
                                 <td>
+                                    <a asp-page="./EditTeam" asp-route-id="@item.TeamId"  class="btn btn-primary">Edit</a>
+
                                     <a asp-page="./DeleteTeam" asp-route-id="@item.TeamId" class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
