--- a/InternManagement/Pages/Account/Login.cshtml
+++ b/InternManagement/Pages/Account/Login.cshtml
@@ -18,6 +18,14 @@
  </head>
 
 <body class="body">
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/HomePage">Job Campaign</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
             <form id="loginForm" method="post" class="col-md-4 mx-auto">
@@ -48,6 +56,7 @@
                 </div>
             </form>
         </div>
+      
     </div>
 
     <partial name="_ValidationScriptsPartial" />
