--- a/InternManagement/Pages/HomePage.cshtml
+++ b/InternManagement/Pages/HomePage.cshtml
@@ -15,7 +15,7 @@
 <body class="body">
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Job Campaign</a>
+            <a class="navbar-brand" href="/HomePage">Job Campaign</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -59,7 +59,9 @@
             }
         </div>
 
-
+        <footer class="footer">
+            <p>&copy; 2024 Intern Management System. All rights reserved.</p>
+        </footer>
     </div>
 
 
