--- a/InternManagement/Pages/Account/InternshipApplication.cshtml
+++ b/InternManagement/Pages/Account/InternshipApplication.cshtml
@@ -98,7 +98,7 @@
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <a href="/Account/Login" class="btn btn-link">Back to Login</a>
+                    <a href="/HomePage" class="btn btn-link">Back to Homepage</a>
                 </div>
             </div>
         </div>
