--- a/InternManagement/Pages/Account/Login.cshtml
+++ b/InternManagement/Pages/Account/Login.cshtml
@@ -50,8 +50,8 @@
                     <div class="form-group text-center mt-2">
                         <button id="loginSAT" type="submit" class="btn btn-primary">Log in</button>
                     </div>
-                    <div class="form-group text-center mt-2">
-                        <a href="/Account/InternshipApplication" class="btn btn-secondary">Apply for Internship</a>
+                    <div class="text-center mt-3">
+                        <a href="/HomePage" class="btn btn-link">Back to Homepage</a>
                     </div>
                 </div>
             </form>
