--- a/InternManagement/Pages/HomePage.cshtml
+++ b/InternManagement/Pages/HomePage.cshtml
@@ -36,14 +36,14 @@
         </div>
         @* Campaign *@
         <div>
-            @foreach (var campaign in Model.Campaigns)
+            @foreach (var campaign in Model.Campaigns.OrderByDescending(c => c.CreatedDate))
             {
-                <div style="background-color:aliceblue; ">
+                <div style="background-color: aliceblue; padding: 10px; margin-bottom: 20px;">
                     <div>Creative Project Manager: @campaign.Tittle</div>
                     <div>Description: @campaign.Description</div>
-                    <div>Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div> |
+                    <div>Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div> 
                     <div>End date: @campaign.EndDate.ToString("MM/dd/yyyy")</div>
-                    <div>Team: @campaign.Team.TeamName</div>
+                    <div>Team: @Model.TeamNames[campaign.TeamId]</div>
                     <div>
                         @if (campaign.PictureUrl != null && campaign.PictureUrl.Length > 0)
                         {
@@ -52,9 +52,9 @@
                             <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 200px;" />
                         }
                     </div>
-                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate"class="btn btn-primary">
+                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate" class="btn btn-primary">
                         Apply for Internship
-                   </a>
+                    </a>
                 </div>
                 <hr class="m-4">
             }
