--- a/InternManagement/Pages/Interns/Submit.cshtml
+++ b/InternManagement/Pages/Interns/Submit.cshtml
@@ -4,7 +4,7 @@
         ViewData["Title"] = "Submit";
     }<h2> Assignment  </h2>
 
-    <form method="post">
+<form method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Assignment.Description" class="control-label"></label>
             <input asp-for="Assignment.Description" class="form-control" readonly />
@@ -30,7 +30,10 @@
         <textarea asp-for="Assignment.Submited" class="form-control" id="Assignment_Submited"></textarea>
         <span asp-validation-for="Assignment.Submited" class="text-danger"></span>
     </div>
-
+    <div class="form-group mb-3">
+        <label asp-for="Assignment.DocumentId">Document</label>
+        <input asp-for="Assignment.DocumentId" type="file" class="form-control" />
+    </div>
     <!-- Hiển thị tên đội -->
 
     <button type="submit" class="btn btn-primary mt-4">Submit</button>
