--- a/InternManagement/Pages/Assignments/Grade.cshtml
+++ b/InternManagement/Pages/Assignments/Grade.cshtml
@@ -29,6 +29,18 @@
         <input asp-for="Assignment.Submited" class="form-control" />
         <span asp-validation-for="Assignment.Submited" class="text-danger"></span>
     </div>
+    <div class="form-group mb-3">
+        <label class="control-label">Document</label>
+        @if (Model.Assignment.DocumentId != null)
+        {
+            @if (Model.Document.DocumentData != null && Model.Document.DocumentData.Length > 0)
+            {
+                var base64Cv = Convert.ToBase64String(Model.Document.DocumentData);
+                var cvSrc = String.Format("data:application/pdf;base64,{0}", base64Cv);
+                <p><a href="@cvSrc" target="_blank" download="@Model.Document.DocumentName@Model.Document.DocumentType" class="btn btn-success mt-2">Download Answer</a></p>
+            }
+        }
+    </div>
     <div class="form-group">
         <label asp-for="Assignment.Grade" class="control-label"></label>
         <input asp-for="Assignment.Grade" class="form-control" />
