--- a/InternManagement/Pages/HomePage.cshtml
+++ b/InternManagement/Pages/HomePage.cshtml
@@ -21,7 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
+                    <input class="form-control me-sm-2" type="search" placeholder="Search" asp-for="SearchString">
                     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
@@ -36,28 +36,28 @@
         </div>
         @* Campaign *@
         <div>
-            @foreach (var campaign in Model.Campaigns.OrderByDescending(c => c.CreatedDate))
-            {
-                <div style="background-color: aliceblue; padding: 10px; margin-bottom: 20px;">
-                    <div>Creative Project Manager: @campaign.Tittle</div>
-                    <div>Description: @campaign.Description</div>
-                    <div>Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div> 
-                    <div>End date: @campaign.EndDate.ToString("MM/dd/yyyy")</div>
-                    <div>Team: @Model.TeamNames[campaign.TeamId]</div>
-                    <div>
-                        @if (campaign.PictureUrl != null && campaign.PictureUrl.Length > 0)
-                        {
-                            var base64Photo = Convert.ToBase64String(campaign.PictureUrl);
-                            var imgSrc = $"data:image/jpeg;base64,{base64Photo}";
-                            <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 200px;" />
-                        }
+                @foreach (var campaign in Model.Campaigns.OrderByDescending(c => c.CreatedDate))
+                {
+                    <div style="background-color: aliceblue; padding: 10px; margin-bottom: 20px;">
+                        <div>Creative Project Manager: @campaign.Tittle</div>
+                        <div>Description: @campaign.Description</div>
+                        <div>Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div>
+                        <div>End date: @campaign.EndDate.ToString("MM/dd/yyyy")</div>
+                        <div>Team: @Model.TeamNames[campaign.TeamId]</div>
+                        <div>
+                            @if (campaign.PictureUrl != null && campaign.PictureUrl.Length > 0)
+                            {
+                                var base64Photo = Convert.ToBase64String(campaign.PictureUrl);
+                                var imgSrc = $"data:image/jpeg;base64,{base64Photo}";
+                                <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 200px;" />
+                            }
+                        </div>
+                        <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate" class="btn btn-primary">
+                            Apply for Internship
+                        </a>
                     </div>
-                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate" class="btn btn-primary">
-                        Apply for Internship
-                    </a>
-                </div>
-                <hr class="m-4">
-            }
+                    <hr class="m-4">
+                }
         </div>
 
         <footer class="footer">
