--- a/InternManagement/Pages/Interns/Edit.cshtml
+++ b/InternManagement/Pages/Interns/Edit.cshtml
@@ -56,6 +56,8 @@
         </div>
 
         <div class="row mt-4">
+                @if (User.IsInRole("Admin"))
+                {             
             <div class="col-md-6">
                 <h4>Internship Information</h4>
                 <div class="mb-3">
@@ -64,6 +66,7 @@
                     <span asp-validation-for="Intern.OverallSuccess" class="text-danger"></span>
                 </div>              
             </div>
+                }
             <div class="col-md-6">
                 <h4>Documents</h4>
                 <div class="mb-3">
