--- a/InternManagement/Pages/HomePage.cshtml
+++ b/InternManagement/Pages/HomePage.cshtml
@@ -36,28 +36,33 @@
         </div>
         @* Campaign *@
         <div>
-                @foreach (var campaign in Model.Campaigns.OrderByDescending(c => c.CreatedDate))
-                {
-                    <div style="background-color: aliceblue; padding: 10px; margin-bottom: 20px;">
-                        <div>Creative Project Manager: @campaign.Tittle</div>
-                        <div>Description: @campaign.Description</div>
-                        <div>Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div>
-                        <div>End date: @campaign.EndDate.ToString("MM/dd/yyyy")</div>
-                        <div>Team: @Model.TeamNames[campaign.TeamId]</div>
-                        <div>
-                            @if (campaign.PictureUrl != null && campaign.PictureUrl.Length > 0)
-                            {
-                                var base64Photo = Convert.ToBase64String(campaign.PictureUrl);
-                                var imgSrc = $"data:image/jpeg;base64,{base64Photo}";
-                                <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 200px;" />
-                            }
-                        </div>
-                        <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate" class="btn btn-primary">
-                            Apply for Internship
-                        </a>
+            @foreach (var campaign in Model.Campaigns.OrderByDescending(c => c.CreatedDate))
+            {
+                <div style="background-color: aliceblue; padding: 10px; margin-bottom: 20px;">
+                    <div><h4>Creative Project Manager: @campaign.Tittle</h4></div>
+                    <div style="display: flex; justify-content: center;">
+                        <div style="text-align: center; max-width: 50%;"><div style="font-weight: bold">Description:</div> @campaign.Description</div>
                     </div>
-                    <hr class="m-4">
-                }
+                    <div style="display: flex; justify-content: center; margin-top: 5px">
+                        <div style="font-weight: bold">Start date: @campaign.StartDate.ToString("MM/dd/yyyy")</div> -
+                        <div style="font-weight: bold">End date: @campaign.EndDate.ToString("MM/dd/yyyy")</div>
+                    </div>
+
+                    <div style="font-weight: bold">Team: @Model.TeamNames[campaign.TeamId]</div>
+                    <div>
+                        @if (campaign.PictureUrl != null && campaign.PictureUrl.Length > 0)
+                        {
+                            var base64Photo = Convert.ToBase64String(campaign.PictureUrl);
+                            var imgSrc = $"data:image/jpeg;base64,{base64Photo}";
+                            <img src="@imgSrc" alt="Campaign Photo" class="img-thumbnail" style="max-width: 500px; " />
+                        }
+                    </div>
+                    <a href="/Account/InternshipApplication?teamId=@campaign.TeamId&startDate=@campaign.StartDate&endDate=@campaign.EndDate" class="btn btn-primary">
+                        Apply for Internship
+                    </a>
+                </div>
+                <hr class="m-4">
+            }
         </div>
 
         <footer class="footer">
